--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,3 +1,123 @@
 {
-    "text" : "new text"
+  "home": {
+    "title": "QR-меню",
+    "revolution": "Революция в визуализации меню",
+    "more": "Узнать больше",
+    "take" :"Попробовать",
+    "scan" : "Сканировать QR-код",
+    "bottom" : "Откройте для ваших клиентов новый способ гастрономических открытий вместе с нашим меню!",
+    "about":{
+      "title" : "Цифровое QR-меню",
+      "text" : "Наше приложение предлагает отличное решение! Мы превращаем обычный текст меню в интуитивно понятные фотографии и краткие описания блюд.\n\nНаличие QR-меню с фотографиями увеличивает средний чек заказа. Когда гости видят аппетитные фотографии блюд и читают описание их состава и особенностей, это делает процесс выбора более привлекательным и побуждает к заказу большего количества блюд или дополнительных закусок и напитков."
+    },
+    "fun" : {
+      "title" : "Преимущества",
+      "list" : [
+        {"title" : "Визуализация", "text" : "Клиент может ознакомиться с меню, отсканировав QR-код на столике ресторана. Не нужно ждать официанта."},
+        {"title" : "Многоязычность", "text" : "Удобное изменение языка меню - больше гостей, включая иностранцев."},
+        {"title" : "Быстрый поиск", "text" : "Если меню большое, поиск помогает клиенту легко найти то, что ему нужно, или получить необходимые рекомендации."},
+        {"title" : "Рекомендации", "text" : "Ваши клиенты смогут оставить свой отзыв, что поможет другим сделать выбор."},
+        {"title" : "Информативность", "text" : "Ваши клиенты получат больше дополнительной информации о ресторане (социальные сети, пароль Wi-Fi и контактные данные)."},
+        {"title" : "Повышение аппетита", "text" : "Фотографии усиливают аппетит - средний чек растет."}
+      ]
+    },
+    "mod": {
+      "title" : "",
+      "list" :[
+        "Возможность размещения QR-меню в социальных сетях",
+        "Неограниченное количество категорий и позиций",
+        "Возможность скрыть и ограничить наличие одним кликом",
+        "Функция старая / новая цена",
+        "Возможность пометить вегетарианские и острые блюда",
+        "Генерация QR из приложения",
+        "Выбор валюты",
+        "Возможность использовать по мере необходимости",
+        "Версия меню для мобильных устройств и для настольных устройств",
+        "Возможность удаленного редактирования меню",
+        "Возможность редактирования меню сети ресторанов с одного аккаунта",
+        "Возможность указать состав ингредиентов",
+        "Возможность указать меню на нескольких языках",
+        "Возможность указать дополнительную информацию (адрес, телефон, пароль Wi-Fi, социальные сети)",
+        "Размещение специальных предложений"
+      ]
+    },
+    "comments":[
+      "Я в этом ресторане впервые, что бы вы посоветовали?",
+      "У меня аллергия, есть ли здесь орехи?",
+      "Что из традиционного в меню?",
+      "Что интересного и необычного можно заказать в меню сегодня?",
+      "Ничего не понимаю, посмотрю на Google Maps, как это выглядит",
+      "Какой вообще размер порции, в прошлый раз мы переедали!",
+      "Какой вообще размер порции, в прошлый раз мы переедали!",
+      "Хорошо, что хотя бы английский есть!",
+      "Что интересного и необычного можно заказать сегодня?"
+    ],
+    "quest" : {
+      "title": "Вопросы и ответы",
+      "list":[
+        {
+          "title":"Чем электронное меню лучше, чем бумажное или PDF-вариант?",
+          "text":"Клиент может ознакомиться с меню, отсканировав QR-код на столике ресторана. Не нужно ждать официанта, который предложит ему бумажный вариант.",
+          "active":false
+        },
+        {
+          "title":"Могу ли я сначала попробовать, подходит ли это нам?",
+          "text":"Клиент может ознакомиться с меню, отсканировав QR-код на столике ресторана. Не нужно ждать официанта, который предложит ему бумажный вариант.",
+          "active":false
+        },
+        {
+          "title":"Могу ли я самостоятельно изменять свое меню?",
+          "text":"Клиент может ознакомиться с меню, отсканировав QR-код на столике ресторана. Не нужно ждать официанта, который предложит ему бумажный вариант.",
+          "active":false
+        },
+        {
+          "title":"Нужно ли изменять QR-код после изменения информации в меню?",
+          "text":"Клиент может ознакомиться с меню, отсканировав QR-код на столике ресторана. Не нужно ждать официанта, который предложит ему бумажный вариант.",
+          "active":false
+        }
+      ]
+    },
+    "price" : {
+      "title" : "Стоимость сервиса QR-меню",
+      "list" : [
+        {"price":"{{price}}","period":"1 месяц","total":"Оплата за 1 месяц всего $10"},
+        {"price":9.5,"period":"полгода","total":"Оплата за 6 месяцев всего $57.6","title":"Сезонный"},
+        {"price":8,"period":"1 год","total":"Оплата за 1 год всего $96"}
+      ],  
+      "free": {
+        "title": "Пробный период",
+        "text" : "Вы можете бесплатно попробовать наш сервис на 1 месяц и решить, подходит ли он вам"
+      }
+    }
+  },
+  "modal":{
+    "title": "Зарегистрироваться",
+    "name" : "Ваше имя:",
+    "resname" : "Название заведения:",
+    "mail" : "Почта, e-mail:",
+    "pas" : {
+      "name":"Пароль:",
+      "ph" : "+5 символов"
+    },
+    "create": "Создать аккаунт",
+    "rule" : "Наши правила использования можно найти по <linkTag>ссылке.</linkTag>",
+    "send":{
+      "title":"Спасибо за регистрацию!",
+      "text" :"Наше приложение проходит последние испытания, в ближайшее время мы свяжемся с вами и сообщим о следующих шагах"
+    },
+    "enter":{
+      "title":"Вход в аккаунт",
+      "button":"Войти",
+      "recovery" : "Восстановить пароль"
+    }
+  },
+  "header" : {
+    "ukraine":"Мы из Украины, и мы продолжаем работать. Спасибо вам за вашу поддержку. Также о текущей ситуации в Украине можно узнать на официальном сайте",
+    "account":"Аккаунт"
+  },
+  "footer": {
+    "contacts" : "Контакты",
+    "rules" : "Умови використання"
+  },
+  "localeName" : "Русский"
 }
