--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -1,3 +1,121 @@
 {
-    "text" : "new text"
+  "home": {
+    "title": "QR меню",
+    "revolution": "Революція у візуалізації меню",
+    "more": "Дізнатися більше",
+    "take" :"Сробувати",
+    "scan" : "Сканувати QR код",
+    "bottom" : "Відкрийте для ваших клієнтів новий спосіб гастрономічних відкриттів разом із нашим меню!",
+    "about":{
+      "title" : "Цифрове QR меню",
+      "text" : "Наш додаток пропонує відмінне рішення! Ми перетворюємо звичайний текст меню на інтуїтивно зрозумілі фото та короткі описи страв \n\n Наявність QR меню з фотографіями збільшує середній чек замовлення. Коли гості можуть бачити апетитні фотографії страв та читати про їх склад і особливості, це робить процес вибору більш привабливим і спонукає до замовлення більшої кількості страв або додаткових страв і напоїв."
+    },
+    "fun" : {
+      "title" : "Переваги",
+      "list" : [
+        {"title" : "Візуалізація", "text" : "Клієнт може ознайомитися з меню сканувавши QR код на столику ресторана. Непотрібно очікувати офіціанта."},
+        {"title" : "Багатомовність", "text" : "Зручна зміна мови меню - більше гостей за рахунок іноземців."},
+        {"title" : "Швидкий пошук", "text" : "Якщо меню велике, пошук допоможе легко віднайти те що потрібно клієнту, або отримати необхідні рекомендації"},
+        {"title" : "Рекомендації", "text" : "Ваші клієнти будуть мати можливість залишити свій відгук, що допоможе іншим легше зробити свій вибір."},
+        {"title" : "Інформативність", "text" : "Ваші клієнти отримають більше додаткової інформації про ресторан (соціальні мережі, wi-fi пароль та контакти)"},
+        {"title" : "Підвищення апетиту", "text" : "Фотографії підвищують апетит - апетит підвищує середній чек."}
+      ]
+    },
+    "mod": {
+      "title" : "",
+      "list" :[
+        "Можливість розміщення QR меню в своїх соціальних мережах",
+        "Необмежена кількість категорій та позицій",
+        "Можливість скрити та обмежити наявність одним кліком",
+        "Функція стара / нова ціна",
+        "Можливість позначити вегетаріанські страви та гострі страви",
+        "Генерація QR з додатку",
+        "Вибір валюти",
+        "Можливість використовувати за потреби",
+        "Версія меню для мобільних а також для десктопних пристроїв",
+        "Можливість редагування меню віддалено",
+        "Можливість редагування меню мережі ресторанці з одного акаунту",
+        "Можливість вказати складники",
+        "Можливість вказатименю декількома мовами",
+        "Можливість вказати додаткову інформацію (адресу, телефон, пароль Wi-fi, соц мережі)",
+        "Розміщення спеціальних пропозицій"
+      ]
+    },
+    "comments":[
+      "Я в цьому ресторані перший раз, що ви порекомендуєте?",
+      "У мене алегрія, чи є тут горіхи?",
+      "Що з традиційного у меню?",
+      "Що б цікавого та незвичного замовити у меню?",
+      "Нерозумію нічого, гляну на Google map як це виглядає",
+      "Яка взагалі порція, минулого разу ми переїли!",
+      "Яка взагалі порція, минулого разу ми переїли!",
+      "Добре що є хоча б англійська!",
+      "Що б цікавого та незвичного замовити сьогодні?"
+    ],
+    "quest" : {
+      "title": "Запитання - відповіді",
+      "list":[
+        {
+          "title":"Чим електронне меню краще за паперове чи PDf варіант?",
+          "text":"Клієнт може ознайомитися з меню сканувавши QR код на столику ресторана. Непотрібно очікувати офіціанта який запропонує його бумажний варіант.",
+          "active":false},
+        {
+          "title":"Чи можна спочатку спробувати чи підходить це нам?",
+          "text":"Клієнт може ознайомитися з меню сканувавши QR код на столику ресторана. Непотрібно очікувати офіціанта який запропонує його бумажний варіант.",
+          "active":false},
+        {
+          "title":"Чи можу я самостійно змінювати своє меню?",
+          "text":"Клієнт може ознайомитися з меню сканувавши QR код на столику ресторана. Непотрібно очікувати офіціанта який запропонує його бумажний варіант.",
+          "active":false
+        },
+        {
+          "title":"Чи потрібно змінювати QR код після зміни інформації в меню?",
+          "text":"Клієнт може ознайомитися з меню сканувавши QR код на столику ресторана. Непотрібно очікувати офіціанта який запропонує його бумажний варіант.",
+          "active":false
+        }
+      ]
+    },
+    "price" : {
+      "title" : "Вартість сервісу QR меню",
+      "list" : [
+        {"price":10,"period":"1 місяць","total":"Оплата за 1 місяць\n всього $10"},
+        {"price":9.5,"period":"півроку","total":"Оплата за 6 місяців\n всього $57.6","title":"Сезонний"},
+        {"price":8,"period":"1 рік","total":"Оплата за 1 рік\n всього $96"}
+      ],  
+      "free": {
+        "title": "Пробний період",
+        "text" : "Ви можете безкоштовно спробувати наш сервіс на 1 місяць і вирішити для себе чи підходить він для вас"
+      }
+    }
+  },
+  "modal":{
+    "title": "Зареєструватися",
+    "name" : "Ваше ім'я:",
+    "resname" : "Назва закладу:",
+    "mail" : "Пошта, e-mail:",
+    "pas" : {
+      "name":"Пароль:",
+      "ph" : "+5 символів"
+    },
+    "create": "Створити акаунт",
+    "rule" : "Наші правила користування можна знайти за <linkTag>посиланням.</linkTag>",
+    "send":{
+      "title":"Дякуємо за реєстрацію!",
+      "text" :"Наш додаток проходить останні випробування, найближчим часом ми зв'яжемось з Вами та повідомимо про наступні кроки"
+    },
+    "enter":{
+      "title":"Увійти",
+      "button":"Вхід",
+      "recovery" : "Відновити пароль"
+    }
+  },
+  "header" : {
+    "ukraine":"Ми з України, і ми продовжуємо працювати. Спасибі вам за вашу підтримку. Також про поточну ситуацію в Україні можна прочитати на офіційному сайті",
+    "account":"Акаунт"
+  },
+  "footer": {
+    "contacts" : "Контакти",
+    "rules" : "Умови використання"
+  },
+  "localeName" : "Українська"
 }
